<package format="2">
  <name>robot_description</name>
  <version>0.0.1</version>
  <description>A simple robot URDF description package</description>
  <maintainer email="you@example.com">Dp</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>rviz</exec_depend>
</package>
